src/libqinputdialog.bf

	[LinkName("QInputDialog_GetDouble7")]
	public static extern double QInputDialog_GetDouble7(QWidget parent, char8[] title, char8[] label, double value, double minValue, double maxValue, int32 decimals);
	[LinkName("QInputDialog_GetDouble8")]
	public static extern double QInputDialog_GetDouble8(QWidget parent, char8[] title, char8[] label, double value, double minValue, double maxValue, int32 decimals, bool ok);
	[LinkName("QInputDialog_GetDouble9")]
	public static extern double QInputDialog_GetDouble9(QWidget parent, char8[] title, char8[] label, double value, double minValue, double maxValue, int32 decimals, bool ok, int64 flags);
	[LinkName("QInputDialog_GetDouble10")]
	public static extern double QInputDialog_GetDouble10(QWidget parent, char8[] title, char8[] label, double value, double minValue, double maxValue, int32 decimals, bool ok, int64 flags, double step);
}